added new chore structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <title>Document</title>
 </head>
 <body>
-    hello
-    
+    <div><h1>Basic git's</h1>
+<ul>
+    <li>git config --global user.name "Kate" - вказує ваше ім'я</li>
+    <li>git config --global user.email sadamochka@gmail.com - вказує вашу електронну адресу</li>
+    <li>git init - створює новий репозиторій </li>
+    <li>git status - відображає стан робочого каталогу та розділу проіндексованих файлів</li>
+    <li>git add - додає зміну з робочого каталогу до розділу проіндексованих файлів</li>
+    <li>git commit - знімок поточного стану змін, доданих до розділу проіндексованих файлів</li>
+    <li>git log - перераховує комміти, зроблені в репозиторії в зворотному до хронологічного порядку</li>
+    <li>git checkout - дозволяє переміщатися між гілками, створеними командою git branch</li>
+    <li>git branch - дозволяє створювати, переглядати, перейменовувати та видаляти гілки</li>
+    <li>git push - вивантаження вмісту локального репозиторію у віддалений репозиторій</li>
+    <li>git pull - вилучення та завантаження вмісту з віддаленого репозиторію та негайного оновлення локального репозиторію цим вмістом</li>
+    <li>git merge - злиття окремих напрямків розробки, створених за допомогою команди git branch, в єдину гілку</li>
+    <li>git clone - для вибору існуючого репозиторію та створення його клону, тобто копії</li>
+</ul>
+    </div>
+
+<div>
+    <p><h3>Файл із розширенням файлу GITIGNORE</h3> Файл Git Ignore, який використовується з системою керування версією / джерелом під назвою Git. Він визначає, які файли та папки не слід ігнорувати у певному вихідному коді.
+Його можна використовувати на контексті, так що правила застосовуються лише до певних папок, але ви також можете створити глобальний файл GITIGNORE, який застосовується до кожного сховища Git.</p></div>
+
+
+<div><h1>Advanced</h1>
+    <ul>
+        <li>git revert - операція для безпечного скасування змін, дія якої спрямована у майбутнє</li>
+        <li>git reset - команда, що використовується для скасування локальних змін у репозиторії Git</li>
+        <li>git rebase - можете взяти всі комміти з однієї гілки і в тому ж порядку застосувати їх до іншої гілки</li>
+        <li>git cherry-pick - можна вибірково застосувати коміти Git до поточної робочої гілки HEAD</li>
+        <li>git stash - дозволяє на якийсь час відкласти зміни, зроблені в робочій копії, щоб ви могли застосувати їх пізніше</li>
+        
+
+    </ul>
+
+
+</div>
+
 </body>
 </html>
