--- a/hw4/index.html
+++ b/hw4/index.html
@@ -44,16 +44,17 @@
         </section>
         <section>
             <div class="frame1">
-                <div class="firstname_main">First Name</div>
+                <input class="firstname_main" placeholder="First Name" type="text">
             </div>
             <div class="frame2">
-                <div class="lastname_main">Last Name</div>
+                <input class="lastname_main" placeholder="Last Name" type="text">
             </div>
             <div class="frame3">
-                <div class="phonenumber_main">Phone Number</div>
+                <input class="phonenumber_main" placeholder="Phone Number" type="text">
             </div>
+
             <div class="frame4">
-                <div class="ss_main">Select Service </div>
+                <input class="ss_main" placeholder="Select Service" type="text">
                 <div><img class="line_main" src="photo/^.png" alt="^"></div>
             </div>
             <button class="button_main">
